# ML-LAB3

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_env.py  data.dvc  export_model.py  main.py  pyproject.toml  smoke_test_export.py
experiments/: results.csv
src/: dataset.py  evaluate.py  main.py  model.py  train.py
