[project]
name = "mlframeworks-lab1"
version = "0.1.0"
description = "Reproducible ML environment verification using uv"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy",
    "torch>=2.0,<3.0",
    "torchvision",
    "torchaudio",
    "scikit-learn",
    "pandas",
    "jupyter",
    "dvc>=3.66.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
